--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.4.*",
+        "laravel/socialite": "^3.0",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4.0"
     },
@@ -37,9 +38,9 @@
         ],
         "post-install-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
-            "php artisan key:generate",
-            "php -r \"file_exists('.env') || copy('.env.example', '.env');\"",
-            "php artisan optimize"
+            "php artisan optimize",
+            "php -r \"copy('.env.example', '.env');\"",
+            "php artisan key:generate"
         ],
         "post-update-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
